--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
-blabla
-
-Try to see how it shows on the website
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
+</html>
